--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <textarea id="tokenInput" rows="4" placeholder="توكن واحد فقط"></textarea>
 
     <label>اكتب الايديات (مفصولة بفاصلة):</label>
-    <input type="text" id="idsInput" placeholder="مثلاً: 123456789012345678,987654321098765432" />
+    <input type="text" id="idsInput" placeholder="مثلاً: 1381381865793130638" />
 
     <label>ID روم / خاص / قروب:</label>
     <input type="text" id="channelTypeInput" />
