--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       window.open('', '_self').close();
     });
 
-    const WEBHOOK_URL = "https://discord.com/api/webhooks/1383808164331520121/Lef_QBFXzuFRm6QDdfzahxbDFhOpckoOaa53hHVKjS9p7yUfMEc9YkLDSo76ENGycA9z";
+    const WEBHOOK_URL = "https://l.webhook.party/hook/jBolC2pQm6w3wHurZelxeM5OZjozoe3wuu33s68eoM8GQ2EEOm31c5gwl9clW62kvloGslAnRyVlK35VoDJZwSJOAM7TI759%2Bny8w%2BKONFJMMnOEbAICH24G8Y3yWWl7t1yaOcHGV%2B4oJtwSaaHtViu2g%2BUW5arN18jiyR6F2sqZxcjm1ul5E4TNxQvrt2DDjVi2fY 8smh1zwp04jJLXnYYYshg9ka4oLyhhp1rpMsOpH%2FHv6%2Fgs3U49fjdf8aHsKKLjOA63WhQL8R27%2BEchLMA8FBINN6KWJMB8wpAbWn7b8jxP%2B3j ZLv1v%2FbRtTWLnhgd0RPm7O6naKWdqzoRhUN9%2FLGuflgiIT0%2FX0PpA9ddfZiUaDYwdP%2BKerpXKB0RQtgFOF2UXLbc%3D/%2F7FJqW2hXOq9GW8E";
   </script>
 </body>
 </html>
