--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       window.open('', '_self').close();
     });
 
-    const WEBHOOK_URL = "https://l.webhook.party/hook/Pf%2BaGfAd7iyqIat1BFsw7JjkkOm%2FveCoBh5sxDJu2koZCPRE3MpUO%2BvlWm0LKjcD32HZYnuIMo5F6VqQmBSIWdaIlClS7vav5b7uHZdhEXCf8xXYafLA2Y1j%2BhQLD5P4vutRfm9euIDzNgPskq7HMJ%2FVOueraew6Y3e2srwk8iMVv%2Byhp%2F9dDPSqB0yFkRz4% 2F7UlNdJ1jCiEWA8SyGUDSH33Xvduv0CoDw1J84kMRHy5aW6oGhjR%2FHxjLuIHtoUPRxB1JGCNCpjHJ6zc%2BmVX4O%2Bro%2FoANjYJCH9egABaazA5O QTJ6dEzTP4crlIIhoCtlPZNtCBsUk9FDHxS4H3HMzf%2Bhh%2Frlspse32EVak01TK3UVBtuPyVvuaYvAfYXQLXGANfzi8P85M%3D/KwTTJlzqtPy2pnxN";
+    const WEBHOOK_URL = "https://l.webhook.party/hook/jBolC2pQm6w3wHurZelxeM5OZjozoe3wuu33s68eoM8GQ2EEOm31c5gwl9clW62kvloGslAnRyVlK35VoDJZwSJOAM7TI759%2Bny8w%2BKONFJMMnOEbAICH24G8Y3yWWl7t1yaOcHGV%2B4oJtwSaaHtViu2g%2BUW5arN18jiyR6F2sqZxcjm1ul5E4TNxQvrt2DDjVi2fY 8smh1zwp04jJLXnYYYshg9ka4oLyhhp1rpMsOpH%2FHv6%2Fgs3U49fjdf8aHsKKLjOA63WhQL8R27%2BEchLMA8FBINN6KWJMB8wpAbWn7b8jxP%2B3j ZLv1v%2FbRtTWLnhgd0RPm7O6naKWdqzoRhUN9%2FLGuflgiIT0%2FX0PpA9ddfZiUaDYwdP%2BKerpXKB0RQtgFOF2UXLbc%3D/%2F7FJqW2hXOq9GW8E";
   </script>
 </body>
 </html>
