--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       left: 20px;
       right: 20px;
       z-index: 2;
-      font-size: 18px;
+      font-size: 24px; /* ← تكبير الخط */
       white-space: pre-wrap;
       color: #00ff00;
     }
@@ -51,8 +51,8 @@
       transform: translateX(-50%);
       background: red;
       color: white;
-      padding: 10px 20px;
-      font-size: 18px;
+      padding: 15px 30px;
+      font-size: 20px;
       border: none;
       cursor: pointer;
       z-index: 3;
@@ -63,11 +63,11 @@
 <body>
   <canvas id="matrix"></canvas>
   <div id="terminal"></div>
-  <button id="stopBtn">إيقاف الهجوم</button>
+  <button id="stopBtn">🚨 إيقاف الهجوم</button>
   <audio id="beep" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
 
   <script>
-    // Matrix effect
+    // Matrix Effect
     const canvas = document.getElementById("matrix");
     const ctx = canvas.getContext("2d");
 
@@ -100,7 +100,7 @@
 
     setInterval(drawMatrix, 50);
 
-    // Terminal effect
+    // Terminal typing effect
     const lines = [
       "جارِ الاتصال بالخادم...",
       "تم الدخول إلى قاعدة البيانات...",
@@ -132,11 +132,25 @@
       }
     }
 
+    function downloadPrankFile() {
+      const blob = new Blob(
+        ["تم اختراقك يا نمر 😂\nكل هذا مجرد مقلب! جهازك بخير 💻\n"],
+        { type: "text/plain;charset=utf-8" }
+      );
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "تم-تهكيرك.txt";
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
+
     stopBtn.onclick = () => {
       document.body.classList.remove('shake');
-      terminal.innerHTML += "\n✅ تم إيقاف الهجوم! لكن البيانات راحت 😈\n";
+      terminal.innerHTML += "\n✅ تم إيقاف الهجوم! لكن بياناتك راحت 😈\n";
       stopBtn.disabled = true;
       stopBtn.innerText = "تم";
+      downloadPrankFile();
     };
 
     typeLine();
