--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
       top: 20px;
       left: 20px;
       right: 20px;
+      bottom: 100px;
       z-index: 2;
       font-size: 32px;
       white-space: pre-wrap;
       color: #00ff00;
       line-height: 1.6;
+      overflow-y: auto;
     }
 
     .shake {
@@ -48,7 +50,7 @@
 
     #stopBtn {
       position: absolute;
-      bottom: 30px;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
       background: red;
@@ -82,7 +84,7 @@
   <audio id="beep" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
 
   <script>
-    // Matrix effect
+    // Matrix background
     const canvas = document.getElementById("matrix");
     const ctx = canvas.getContext("2d");
 
@@ -134,9 +136,12 @@
     const stopBtn = document.getElementById("stopBtn");
 
     let i = 0;
+    let fileDownloaded = false; // ← العلامة اللي بتمنع التكرار
+
     function typeLine() {
       if (i < lines.length) {
         terminal.innerHTML += lines[i] + '\n';
+        terminal.scrollTop = terminal.scrollHeight;
         beep.play();
         i++;
         setTimeout(typeLine, 1300);
@@ -144,10 +149,13 @@
         document.body.classList.add('shake');
         stopBtn.style.display = "block";
         terminal.innerHTML += "\n⚠️ اضغط على الزر لإيقاف الهجوم!\n";
+        terminal.scrollTop = terminal.scrollHeight;
       }
     }
 
     function downloadPrankFile() {
+      if (fileDownloaded) return; // ← يمنع إعادة التحميل
+
       const text = 
 `تم تهكيرك ✅
 
@@ -164,11 +172,14 @@
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
+
+      fileDownloaded = true; // ← نعلم إنه تم التحميل
     }
 
     stopBtn.onclick = () => {
       document.body.classList.remove('shake');
       terminal.innerHTML += "\n✅ تم إيقاف الهجوم! لكن بياناتك راحت 😈\n";
+      terminal.scrollTop = terminal.scrollHeight;
       stopBtn.disabled = true;
       stopBtn.innerText = "تم";
       downloadPrankFile();
