--- a/index.html
+++ b/index.html
@@ -22,40 +22,23 @@
       z-index: 0;
     }
 
-    #container {
+    #terminal {
       position: absolute;
       top: 20px;
       left: 20px;
       right: 20px;
       bottom: 100px;
       z-index: 2;
-      display: flex;
-      gap: 15px;
-      align-items: flex-start;
-    }
-
-    #terminal {
-      flex: 1;
-      font-size: 32px;
+      font-size: 18px; /* حجم الخط أصغر */
       white-space: pre-wrap;
       color: #00ff00;
-      line-height: 1.6;
+      line-height: 1.4;
       overflow-y: auto;
       max-height: 100%;
       border: 2px solid #00ff00;
       padding: 10px 15px;
       border-radius: 8px;
       background: rgba(0, 0, 0, 0.7);
-    }
-
-    #fakeCam {
-      width: 160px;
-      height: 120px;
-      border: 2px solid #00ff00;
-      border-radius: 8px;
-      background: black;
-      box-shadow: 0 0 10px lime;
-      object-fit: cover;
     }
 
     .shake {
@@ -77,8 +60,8 @@
       transform: translateX(-50%);
       background: red;
       color: white;
-      padding: 20px 40px;
-      font-size: 28px;
+      padding: 15px 30px;
+      font-size: 22px; /* أصغر */
       font-weight: bold;
       border: none;
       cursor: pointer;
@@ -88,23 +71,13 @@
     }
 
     @media (max-width: 600px) {
-      #container {
-        flex-direction: column;
-      }
-
       #terminal {
-        font-size: 40px;
-        max-height: 300px;
-      }
-
-      #fakeCam {
-        width: 100%;
-        height: auto;
+        font-size: 22px; /* أصغر شوي للجوال */
       }
 
       #stopBtn {
-        font-size: 32px;
-        padding: 25px 50px;
+        font-size: 26px;
+        padding: 20px 40px;
       }
     }
   </style>
@@ -112,13 +85,7 @@
 <body>
   <canvas id="matrix"></canvas>
 
-  <div id="container">
-    <div id="terminal"></div>
-    <!-- فيديو وهمي (looped) بدل الكاميرا الحقيقية -->
-    <video id="fakeCam" autoplay muted loop playsinline
-      src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"
-      ></video>
-  </div>
+  <div id="terminal"></div>
 
   <button id="stopBtn">🚨 إيقاف الهجوم</button>
 
