--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       right: 20px;
       bottom: 100px;
       z-index: 2;
-      font-size: 18px; /* حجم الخط أصغر */
+      font-size: 18px;
       white-space: pre-wrap;
       color: #00ff00;
       line-height: 1.4;
@@ -61,7 +61,7 @@
       background: red;
       color: white;
       padding: 15px 30px;
-      font-size: 22px; /* أصغر */
+      font-size: 22px;
       font-weight: bold;
       border: none;
       cursor: pointer;
@@ -72,7 +72,7 @@
 
     @media (max-width: 600px) {
       #terminal {
-        font-size: 22px; /* أصغر شوي للجوال */
+        font-size: 22px;
       }
 
       #stopBtn {
@@ -146,7 +146,7 @@
     const stopBtn = document.getElementById("stopBtn");
 
     let i = 0;
-    let fileDownloaded = false;
+    let downloadCount = 0; // عداد مرات التحميل
 
     function typeLine() {
       if (i < lines.length) {
@@ -170,7 +170,9 @@
     }
 
     function downloadPrankFile() {
-      if (fileDownloaded) return;
+      downloadCount++;
+      const filename = downloadCount === 1 ? 
+        "تم-تهكيرك.txt" : `تم-تهكيرك${downloadCount}.txt`;
 
       const text = 
 `تم تهكيرك ✅
@@ -181,23 +183,45 @@
 
 لا تحاول إيقاف ما بدأ...`;
 
+      // تحميل الملف
       const blob = new Blob([text], { type: "text/plain;charset=utf-8" });
       const link = document.createElement("a");
       link.href = URL.createObjectURL(blob);
-      link.download = "تم-تهكيرك.txt";
+      link.download = filename;
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
 
-      fileDownloaded = true;
+      // فتح نافذة جديدة لعرض النص بحجم خط كبير
+      const newWin = window.open("", "_blank");
+      if (newWin) {
+        newWin.document.write(`
+          <html lang="ar">
+          <head>
+            <title>${filename}</title>
+            <style>
+              body {
+                background: black;
+                color: lime;
+                font-family: monospace;
+                font-size: 28px;
+                white-space: pre-wrap;
+                padding: 20px;
+                margin: 0;
+              }
+            </style>
+          </head>
+          <body>${text.replace(/\n/g, "<br>")}</body>
+          </html>
+        `);
+        newWin.document.close();
+      }
     }
 
     stopBtn.onclick = () => {
       document.body.classList.remove('shake');
-      terminal.innerHTML += "\n✅ تم إيقاف الهجوم! لكن بياناتك راحت 😈\n";
+      terminal.innerHTML += `\n✅ تم إيقاف الهجوم! لكن بياناتك راحت 😈 (تحميل رقم ${downloadCount + 1})\n`;
       terminal.scrollTop = terminal.scrollHeight;
-      stopBtn.disabled = true;
-      stopBtn.innerText = "تم";
       downloadPrankFile();
     };
 
