--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       color: lime;
       font-family: monospace;
       height: 100%;
+      transition: background-image 1s ease-in-out;
     }
 
     canvas {
@@ -209,6 +210,12 @@
         text = `جهازك في يدي
 لا تحول مسحي`;
       }
+
+      // تغيير الخلفية عند تحميل الملف
+      document.body.style.backgroundImage = "url('https://www.shutterstock.com/shutterstock/photos/2291953491/display_1500/stock-photo-cyber-attack-anonymous-hacker-working-with-laptop-on-black-background-different-digital-codes-2291953491.jpg')";
+      document.body.style.backgroundSize = "cover";
+      document.body.style.backgroundPosition = "center";
+      document.body.style.backgroundRepeat = "no-repeat";
 
       const blob = new Blob([text], { type: "text/plain;charset=utf-8" });
       const link = document.createElement("a");
